# NTRU-AMX

./: .clang-format  .gitignore  BuildCaching.cmake  CMakeLists.txt  CPUDetection.cmake  CompareKATs.cmake  CreateSymlink.cmake  README.md  consolidate_benchmarks.py  run_all.sh  run_benchmarks_dit.sh  run_benchmarks_no_dit.sh  run_ct_experiments_dit.sh  run_ct_experiments_no_dit.sh
PQC_NEON/neon/ntru/: CMakeLists.txt
PQC_NEON/neon/ntru/mmap/neon-hps2048509/: PQCgenKAT_kem.c  api.h  api_bytes.h  cmov.c  cmov.h  crypto_hash_sha3256.h  crypto_sort_int32.c  crypto_sort_int32.h  fips202.c  fips202.h  kem.c  kem.h  memory_alloc.h  neon_batch_multiplication.c  neon_batch_multiplication.h  neon_matrix_transpose.c  neon_matrix_transpose.h  neon_poly_lift.c  neon_poly_mod.c  neon_poly_rq_mul.c  neon_sample_iid.c  owcpa.c  owcpa.h  pack3.c  packq.c  params.h  poly.c  poly.h  poly_r2_inv.c  poly_s3_inv.c  randombytes.c  randombytes.h  rng.c  rng.h  sample.c  sample.h
PQC_NEON/neon/ntru/mmap/neon-hps2048677/: PQCgenKAT_kem.c  amx_poly_rq_mul.c  api.h  api_bytes.h  cmov.c  cmov.h  crypto_hash_sha3256.h  crypto_sort_int32.c  crypto_sort_int32.h  fips202.c  fips202.h  kem.h  neon_batch_multiplication.c  neon_batch_multiplication.h  neon_matrix_transpose.c  neon_matrix_transpose.h  neon_poly_lift.c  neon_poly_mod.c  neon_poly_rq_mul.c  owcpa.h  pack3.c  packq.c  params.h  poly.c  poly.h  poly_r2_inv.c  poly_s3_inv.c  randombytes.c  randombytes.h  rng.c  rng.h  sample.c  sample.h  sample_iid.c
PQC_NEON/neon/ntru/mmap/neon-hps4096821/: PQCgenKAT_kem.c  api.h  api_bytes.h  cmov.c  cmov.h  crypto_hash_sha3256.h  crypto_sort_int32.c  crypto_sort_int32.h  fips202.c  fips202.h  kem.c  kem.h  neon_batch_multiplication.c  neon_batch_multiplication.h  neon_matrix_transpose.c  neon_matrix_transpose.h  neon_poly_lift.c  neon_poly_mod.c  neon_poly_rq_mul.c  owcpa.c  owcpa.h  pack3.c  packq.c  params.h  poly.h  poly_r2_inv.c  poly_s3_inv.c  randombytes.c  randombytes.h  rng.c  rng.h  sample.c  sample.h  sample_iid.c  speed.c  speed_polymul.c
PQC_NEON/neon/ntru/mmap/neon-hrss701/: PQC_NEON  PQCgenKAT_kem.c  api.h  api_bytes.h  cmov.c  cmov.h  crypto_hash_sha3256.h  fips202.c  fips202.h  kem.c  kem.h  neon_batch_multiplication.c  neon_batch_multiplication.h  neon_matrix_transpose.c  neon_matrix_transpose.h  neon_poly_lift.c  neon_poly_mod.c  neon_poly_rq_mul.c  owcpa.c  owcpa.h  pack3.c  packq.c  params.h  poly.h  poly_r2_inv.c  poly_s3_inv.c  randombytes.c  randombytes.h  rng.c  rng.h  sample.c  sample.h  sample_iid.c  speed_polymul_ct.c
PQC_NEON/neon/ntru/stack/neon-hps2048509/: neon_poly_lift.c  poly_r2_inv.c  poly_s3_inv.c  speed.c  speed_polymul.c  speed_polymul_ct.c
PQC_NEON/neon/ntru/stack/neon-hps2048677/: poly_s3_inv.c  randombytes.c  randombytes.h
PQC_NEON/neon/ntru/stack/neon-hps4096821/: poly_s3_inv.c  rng.c
amx/: aarch64.h  amx.h  amx_poly_rq_mul.c  aux_routines.c  aux_routines.h  latency_experiment.c  latency_experiment.h  memory_alloc.h  polymodmul.c  polymodmul.h  polymodmul_karatsuba.c  polymodmul_karatsuba.h  polymul.c  polymul.h
ct_results_M1_dit/: latency_experiment.txt  results.csv
ct_results_M3_dit/: latency_experiment.txt  results.csv
jupyter/: equivalence_tests.R  histograms_heat_maps.ipynb  speed_polymul_curve_fit.ipynb  subquadratic.ipynb
rng_opt/: randombytes.h  rng.c  rng.h  rng_inline_asm.c
speed/: feat_dit.c  feat_dit.h  latency_experiment.c  speed_blas.c  speed_mmap.c  speed_polymodmul_ntru.c  speed_polymodmul_scaling.c  speed_rng.c  (+7 more)
vector-polymul-ntru-ntrup/: CMakeLists.txt  README.md
vector-polymul-ntru-ntrup/cycles/: README.md  hal.c  hal.h  m1cycles.c
vector-polymul-ntru-ntrup/enable_ccr/: README.md  enable_ccr.c
vector-polymul-ntru-ntrup/hash/: README.md  aes.c  aes.h  fips202.c  sha2.c
vector-polymul-ntru-ntrup/ntruhps2048677/: README.md
vector-polymul-ntru-ntrup/ntruhps2048677/mmap/aarch64_amx/: amx_poly_rq_mul.c  owcpa.h  pack3.c  packq.c  poly.c  poly_lift.c  poly_mod.c  sample.c  sample_iid.c
vector-polymul-ntru-ntrup/ntruhps2048677/mmap/aarch64_tc/: api.h  batch_multiplication.c  batch_multiplication.h  cmov.c  cmov.h  owcpa.h  pack3.c  packq.c  params.h  poly.c  poly.h  poly_lift.c  poly_mod.c  poly_r2_inv.c  poly_s3_inv.c  sample.c  sample.h  sample_iid.c  tc.c  tc.h
vector-polymul-ntru-ntrup/ntruhps2048677/mmap/aarch64_tmvp/: api.h  batch_multiplication.c  cmov.h  kem.c  owcpa.c  owcpa.h  pack3.c  packq.c  params.h  poly.c  poly_r2_inv.c  sample_iid.c  speed.c  speed_polymul_ct.c  tmvp.c
vector-polymul-ntru-ntrup/ntruhps2048677/stack/aarch64_amx/: api.h  cmov.c  params.h  poly.c  poly.h  poly_mod.c  sample_iid.c  speed.c  speed_polymul.c
vector-polymul-ntru-ntrup/ntruhps2048677/stack/aarch64_tc/: batch_multiplication.c  batch_multiplication.h  cmov.h  kem.c  owcpa.h  pack3.c  poly.c  poly.h  poly_s3_inv.c  speed_polymul_ct.c  tc.c  tc.h
vector-polymul-ntru-ntrup/ntruhps2048677/stack/aarch64_tmvp/: api.h  batch_multiplication.c  kem.c  owcpa.c  owcpa.h  pack3.c  params.h  poly.c  poly.h  poly_lift.c  poly_mod.c  poly_r2_inv.c  poly_s3_inv.c  sample.c  sample.h  tmvp.c  tmvp.h
vector-polymul-ntru-ntrup/ntruhrss701/mmap/aarch64_amx/: api.h  cmov.c  cmov.h  memory_alloc.h  owcpa.c  params.h  poly.c  poly.h  poly_r2_inv.c  poly_s3_inv.c  sample.h  speed_polymul.c
vector-polymul-ntru-ntrup/ntruhrss701/mmap/aarch64_tmvp/: batch_multiplication.h  cmov.c  cpucycles.h  owcpa.c  poly.h  poly_lift.c  poly_mod.c  poly_s3_inv.c  sample.c  sample.h  tmvp.h  tmvp2.c  tmvp_144_ka33_ka2.py  tmvp_16x16.c
vector-polymul-ntru-ntrup/ntruhrss701/stack/aarch64_amx/: packq.c  poly_lift.c  poly_r2_inv.c  sample.c  sample.h
vector-polymul-ntru-ntrup/ntruhrss701/stack/aarch64_tmvp/: api.h  batch_multiplication.h  cpucycles.h  kem.c  owcpa.c  owcpa.h  params.h  poly.c  poly.h  poly_lift.c  poly_mod.c  poly_r2_inv.c  poly_s3_inv.c  sample.h  tmvp.h  tmvp2.c  tmvp_144_ka33_ka2.py  tmvp_16x16.c
vector-polymul-ntru-ntrup/randombytes/: README.md  randombytes.c  randombytes.h
vector-polymul-ntru-ntrup/sort/: README.md  crypto_sort.c  crypto_sort.h
(+124 files in other folders)
